[package]
name = "scripture_connections"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
zip = "8.6.0"
